--- a/themes/custom/login/resources/css/style.css
+++ b/themes/custom/login/resources/css/style.css
@@ -1,6 +1,8 @@
 body {
   font-family: "Roboto", sans-serif;
-  background-color: #fff; }
+  background-color: #fff;
+  font-size : 12px;
+   }
 
 p {
   color: #b3b3b3;
@@ -48,6 +50,7 @@ h2 {
 .half .contents .form-control, .half .bg .form-control {
   border: none;
   border-radius: 4px;
+  font-size : 12px;
   height: 54px;
   background: #efefef; }
   .half .contents .form-control:active, .half .contents .form-control:focus, .half .bg .form-control:active, .half .bg .form-control:focus {
@@ -67,9 +70,15 @@ h2 {
 .half a {
   text-decoration: underline; }
 
+.half a.zocial {
+    text-decoration: none;
+}
+
 .half .btn {
   padding-left: 30px;
-  padding-right: 30px; }
+  padding-right: 30px;
+  font-size : 12px;
+  }
 
 .half .forgot-pass {
   position: relative;
@@ -176,9 +185,12 @@ h2 {
     color: #fff; }
 
 .login-pf-social {
-display: flex;
+width: 100%;
+list-style-type: none;
 }
 
 .login-pf-social li {
-margin-right: 10px
+width: auto;
+display: inline-block;
+margin-right: 5px
 }
