--- a/themes/custom/login/resources/css/style.css
+++ b/themes/custom/login/resources/css/style.css
@@ -51,7 +51,7 @@ h2 {
   border: none;
   border-radius: 4px;
   font-size : 12px;
-  height: 54px;
+  height: 50px;
   background: #efefef; }
   .half .contents .form-control:active, .half .contents .form-control:focus, .half .bg .form-control:active, .half .bg .form-control:focus {
     outline: none;
@@ -78,6 +78,8 @@ h2 {
   padding-left: 30px;
   padding-right: 30px;
   font-size : 12px;
+  padding-top: 0.7rem!important;
+  padding-bottom: 0.7rem!important;
   }
 
 .half .forgot-pass {
