--- a/themes/custom/login/resources/css/style.css
+++ b/themes/custom/login/resources/css/style.css
@@ -5,7 +5,7 @@ body {
    }
 
 p {
-  color: #b3b3b3;
+  color: #4e4242;
   font-weight: 300; }
 
 h1, h2, h3, h4, h5, h6,
@@ -80,6 +80,7 @@ h2 {
   font-size : 12px;
   padding-top: 0.7rem!important;
   padding-bottom: 0.7rem!important;
+  margin-bottom: 10px;
   }
 
 .half .forgot-pass {
